--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = "0.15.0"
+bevy = { version = "0.15.0", features = ["trace"] }
 log = { version = "*", features = [
     "max_level_debug",
     "release_max_level_warn",
